--- a/src/main/resources/templates/company/form.html
+++ b/src/main/resources/templates/company/form.html
@@ -11,6 +11,7 @@
     <div class="form-group">
       <label for="name">取引先会社名</label>
       <input id="name" name="name" type="text" class="form-control" th:field="*{name}" />
+      <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
     </div>
     <div class="form-group">
       <label for="email">Email</label>
