ダウンロードインポート
ダウンロードインポート完了時

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,6 +18,11 @@
               <a th:href="@{${entry}}"><span th:text="${entry}"></span></a>
             </td>
           </tr>
+          <tr>
+            <td>
+              <a href="/orders/shipping">/orders/shipping</a>
+            </td>
+          </tr>
         </tbody>
       </table>
     </div>
