--- a/src/main/resources/templates/order/index.html
+++ b/src/main/resources/templates/order/index.html
@@ -4,7 +4,7 @@
 <th:block layout:fragment="content">
   <h1>受注一覧</h1>
   <hr />
-  <a th:href="@{/orders/new}">新規作成</a><br /><br />
+  <a th:href="@{/orders/new}">新規作成i</a><br /><br />
 
   <table class="table">
     <thead>
