--- a/src/main/resources/templates/order/index.html
+++ b/src/main/resources/templates/order/index.html
@@ -5,7 +5,8 @@
   <h1>受注一覧</h1>
   <hr />
   <a th:href="@{/orders/new}">新規作成</a>
-  <a th:href="@{/orders/shipping}">発送ページ</a><br /><br />
+  <a th:href="@{/orders/shipping}">発送ページ</a>
+  <a th:href="@{/orders/payments}">入金ページ</a><br /><br />
 
   <table class="table">
     <thead>
