--- a/src/main/resources/templates/company/show.html
+++ b/src/main/resources/templates/company/show.html
@@ -2,6 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
   layout:decorate="~{layout/layout}">
 <th:block layout:fragment="content">
+  <div th:if="${importStatus != null}">
+    <p>取り込みステータス： <span th:text="${importStatus.status.displayValue}"></span></p>
+  </div>
   <h1>取引先 詳細</h1>
   <hr />
   <div class="form-group">
@@ -34,6 +37,7 @@
   <br />
   <br />
   <br />
+  <span th:text="${importStatus}"></span>
   <h1>取引金額一覧</h1>
   <hr />
   <a class="btn btn-info" th:href="@{/transactionAmounts/{c_id}/new(c_id = ${company.id})}">取引金額 新規追加</a><br /><br />
@@ -51,6 +55,9 @@
     <form th:method="post" th:action="@{/transactionAmounts/download}" enctype="multipart/form-data" class="col-md-4">
       <input type="submit" value="テンプレートをダウンロード" class="btn btn-warning">
     </form>
+    <div>
+
+    </div>
   </div>
 
   <table class="table">
